# libeatmyxattr

./: .bzrignore  .gitignore  .quickly  Makefile.am  README.md  configure.ac  eatmyxattr  eatmyxattr.in  eatmyxattr.sh  eatmyxattr.sh.in  libeatmyxattr.la  libeatmyxattr.spec  libeatmyxattr.spec.in  start_suspended.sh  test_run.sh
debian/: README.Debian  changelog  control  copyright
libeatmyxattr/: libeatmyxattr.c  visibility.h
